--- a/markdown.css
+++ b/markdown.css
@@ -1,8 +1,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", "Helvetica", PingFang SC, PingFang TC, Hiragino Sans GB, STHeiti, Microsoft YaHei, Microsoft JhengHei, "WenQuanYi Micro Hei", sans-serif;
   font-size: 15px;
-  color: #555;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   width: 80%;
 }
 
