--- a/markdown.css
+++ b/markdown.css
@@ -1,121 +1,199 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetca Neue", "Helvetica", PingFang SC, PingFang TC, Hiragino Sans GB, STHeiti, Microsoft YaHei, Microsoft JhengHei, "WenQuanYi Micro Hei", sans-serif;
-  font-size: 14px;
-  margin: 0 auto 50px;
-  width: 80%;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  line-height: 1.8;
+  background-color: white;
+  width: 780px;
+  margin: 0 auto;
 }
 
-p, pre, ul, ol {
-  margin: 16px 0;
-  line-height: 22px;
+a {
+  color: #4183C4;
 }
-
-ul > li > ul {
-  margin: 5px 0;
-}
-
-.container {
-  padding: 16px 16px;
-}
-
-a { color: #0645ad; text-decoration: none; }
-a:visited { color: #0645ad; }
-a:hover { color: #06e; }
-a:active { color: #06e; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  margin: 0;
+  margin: 20px 0 10px;
   padding: 0;
-  color: #375EAB;
-  margin: 20px 0;
+  font-weight: normal;
 }
 
 h1 {
   font-size: 28px;
-  padding: 0;
-  font-weight: bold;
+  color: black;
+  text-align: center;
 }
 
 h2 {
-  font-size: 20px;
-  background: #E0EBF5;
-  padding: 8px;
-  line-height: 1.25;
-  font-weight: normal;
+  font-size: 24px;
+  border-bottom: 1px solid #cccccc;
+  color: black;
 }
 
 h3 {
-  font-size: 20px;
-}
-
-h4 {
   font-size: 18px;
 }
 
-h5, h6 {
+h4 {
   font-size: 16px;
-  font-weight: bold;
 }
 
-pre, code {
-  color: #555;
-  font-family: Menlo, monospace;
-  border-radius: 2px;
-  overflow: auto;
-  background-color: #f8f8f8;
-  background: #EFEFEF;
-  font-size: 96%;
+h5 {
+  font-size: 14px;
 }
 
-pre {
-  padding: 8px;
+h6 {
+  color: #777777;
+  font-size: 14px;
 }
 
-code {
-  padding: 1px 4px;
+p, blockquote, ul, ol, dl, li, table, pre {
+  margin: 15px 0;
 }
 
-pre code {
-  padding: 0 0;
+hr {
+  border: 0 none;
+  color: #cccccc;
+  height: 4px;
+  padding: 0;
+}
+
+
+li p.first {
+  display: inline-block;
+}
+
+ul, ol {
+  padding-left: 30px;
+}
+
+ul :first-child, ol :first-child {
+  margin-top: 0;
+}
+
+ul :last-child, ol :last-child {
+  margin-bottom: 0;
+}
+
+dl {
+  padding: 0;
+}
+
+dl dt {
+  font-size: 14px;
+  font-style: italic;
+  padding: 0;
+  margin: 15px 0 5px;
+}
+
+dl dt:first-child {
+  padding: 0;
+}
+
+dl dt > :first-child {
+  margin-top: 0;
+}
+
+dl dt > :last-child {
+  margin-bottom: 0;
+}
+
+dl dd {
+  margin: 0 0 15px;
+  padding: 0 15px;
+}
+
+dl dd > :first-child {
+  margin-top: 0;
+}
+
+dl dd > :last-child {
+  margin-bottom: 0;
 }
 
 blockquote {
-  padding: 0px 15px;
-  margin: 15px 0;
-  border-left: 2px solid rgba(40, 50, 60, 0.85);
-  overflow: auto;
-  word-wrap: break-word;
+  border-left: 4px solid #dddddd;
+  padding: 0 15px;
+  color: #777777;
 }
 
-blockquote p {
-  margin: 0 0 10px 0;
-  color: #8a8a8a;
+blockquote > :first-child {
+  margin-top: 0;
 }
 
-blockquote p:last-child {
+blockquote > :last-child {
+  margin-bottom: 0;
+}
+
+table {
+  padding: 0;
+}
+
+table tr {
+  border-top: 1px solid #cccccc;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+}
+
+table tr:nth-child(2n) {
+  background-color: #f8f8f8;
+}
+
+table tr th {
+  border: 1px solid #cccccc;
+  text-align: left;
+  margin: 0;
+  padding: 6px 13px;
+}
+
+table tr td {
+  border: 1px solid #cccccc;
+  text-align: left;
+  margin: 0;
+  padding: 6px 13px;
+}
+
+table tr th :first-child, table tr td :first-child {
+  margin-top: 0;
+}
+
+table tr th :last-child, table tr td :last-child {
   margin-bottom: 0;
 }
 
 img {
-  border: 0;
-  vertical-align: middle;
-  margin: 0 auto;
   max-width: 100%;
 }
 
-table {
-  border-collapse: collapse;
-  width: 100%;
-  font-size: 90%;
-  color: #666;
-  margin: 16px 0;
+
+code, tt {
+  margin: 0 2px;
+  padding: 0 5px;
+  white-space: nowrap;
+  border: 1px solid #eaeaea;
+  background-color: #f8f8f8;
+  border-radius: 3px;
 }
 
-table, th, td {
-  border: 1px solid #ccc;
+pre code {
+  margin: 0;
+  padding: 0;
+  white-space: pre;
+  border: none;
+  background: transparent;
 }
 
-th, td {
-  padding: 8px 10px;
+pre {
+  background-color: #f8f8f8;
+  border: 1px solid #cccccc;
+  font-size: 13px;
+  line-height: 19px;
+  overflow: auto;
+  padding: 6px 10px;
+  border-radius: 3px;
+}
+
+pre code, pre tt {
+  background-color: transparent;
+  border: none;
 }
